# sks-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  auth_keys_from_cas  config.yml  docker-compose.yml
src/: bin.rs  cli.yml  lib.rs  tests.rs
templates/: about.html.tera  base.html.tera  index.html.tera
templates/error/: 404.html.tera
